fix aside dropdown menu overflow-y scroll

--- a/bundle/Resources/sass/_base.scss
+++ b/bundle/Resources/sass/_base.scss
@@ -194,7 +194,7 @@ label {
 .navi-wrap {
     position:relative; width:$asideWidth; height:100%; overflow:hidden; padding-bottom:70px;
     .dropdown-menu {
-        background:$asideBg; border:none; color:$asideColor; position:fixed; top:50%; z-index:1000; right:auto; width:200px; left:51px; overflow-y:scroll; @include rounded(0); min-width:0;
+        background:$asideBg; border:none; color:$asideColor; position:fixed; top:50%; z-index:1000; right:auto; width:200px; left:51px; overflow-y:auto; @include rounded(0); min-width:0;
     }
     .aside-nav {
         height:100%; width:$asideWidth + 15px; padding-right:15px; overflow-x:hidden; overflow-y:scroll;
